--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -87,29 +87,86 @@
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
+                        <h2>About</h2>
+                    </div>
+                   
+                    <p class="tax-price">
+                        Escape to the arms of nature with Ashokam Resort Varkala, a sea-facing property amidst lush greenery with luxury accommodation and premium amenities. <br>
+                        The property is situated at a tranquil location heaving natural views all around. <br>
+                        A conference hall is available on-site for hosting corporate meetings. <br>
+                        Relax and unwind at the swimming pool available on-site. <br>
+                        The property provides a variety of Ayurveda packages to heal your body. <br>
+                    </p> <br>
+
+                    <span>Room Types</span><br>
+                    <div class="list_div">
+                        <li>Non AC Room  --  Room Only  &  Room with Breakfast available</li>
                         
-                        <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p>
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                    </div><br><br>
+
+                    <!-- <span>Property Rules</span><br> -->
+                    <div class="list_div">
+                        <h3>Property Rules</h3>
+                        <p>Check-in: 2 PM Check-out: 11 AM</p>
+                        <li>Guests below 18 years of age are not allowed at the property.</li>
+                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                        <li>Pets are not allowed.</li>
+                    </div><br><br>
+
+                    <h1 class="Location">Hotel-images</h1>
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villaskyframe_2.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villasky_room5.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/villasky_room5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>        
+    
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villa-skyframe_room1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/villa-skyframe_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villasky_room3.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/villasky_room3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/villasky_room4.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/villasky_room4.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
-                    </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.62709153765!2d76.7095471740638!3d8.726914393646416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eedde07776bb%3A0x1b510a778eae69a2!2sVilla%20Skyframe!5e0!3m2!1sen!2sin!4v1717518754434!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
