--- a/templates/evabeach_details.html
+++ b/templates/evabeach_details.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
+                    <a class="navbar-brand logo_h" href="{%url 'index'%}"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -120,22 +120,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <!-- <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/cliffcounty-dtls.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/eva_out.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/eva_out.jpg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="gallery_item">
+                        </div> -->
+                        <!-- <div class="gallery_item">
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
                                 <div class="hover">
                                     <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>        
     
                     <div class="hotel-gallery" id="gallery">
