--- a/templates/haiwa_details.html
+++ b/templates/haiwa_details.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
+                    <a class="navbar-brand logo_h" href="{%url 'index'%}"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -104,7 +104,6 @@
                     <div class="list_div">
                         <h3>Property Rules</h3>
                         <p>Check-in: 12 PM - 7:30 PM  Check-out: 11 AM</p>
-                        <li>Guests below 18 years of age are not allowed at the property.</li>
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                         <li>Pets are not allowed.</li>
                     </div><br><br>
@@ -113,31 +112,31 @@
                     <div class="hotel-gallery" id="gallery">
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_room_2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_room_2.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/cliffcounty-dtls.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_room3.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_room3.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/haiwa_room4.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/haiwa_room4.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>        
     
-                    <div class="hotel-gallery" id="gallery">
+                    <!-- <div class="hotel-gallery" id="gallery">
                         <div class="gallery_item">
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
@@ -162,7 +161,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3943.5011516462932!2d76.7021423!3d8.7388263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef1c67bafa2b%3A0x76d0cb27ecb2e89a!2sThe%20Haiwa%20Beach%20Residency!5e0!3m2!1sen!2sin!4v1717566511971!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
