--- a/templates/index.html
+++ b/templates/index.html
@@ -162,8 +162,8 @@
                                     <a href="{%url 'cliffcounty_details' %}">
                                     <h2>Cliff County Varkala</h2>
                                     </a>
-                                    <p><a href="#">Cliff County Varkala - View on map</a></p>
-                                    <p> walkable distance to the Beach</p>
+                                    <p><a href="#">Cliff County Varkala </a></p>
+                                    <p> Walkable distance to the Beach</p>
                                     <div class="amenities">
                                         <span>Car parking</span>
                                         <span> Wi-Fi</span>
@@ -173,7 +173,7 @@
                                     </div>
                                 </div>
                                 <div class="details_info">
-                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
                                     <a class="viewmore_a" href="{%url 'cliffcounty_details' %}">
                                         <button class="view_more_btn">View more</button>
@@ -197,7 +197,7 @@
                                     <a href="{%url 'ashokam_details' %}">
                                     <h2>Ashokam Beach Resort</h2>
                                     </a>
-                                    <p><a href="#">Ashokam Beach Resort - View on map</a></p>
+                                    <p><a href="#">Ashokam Beach Resort</a></p>
                                     <p> 100 meter Walkable distance to the Beach</p>
                                     <div class="amenities">
                                         <span>Car park</span>
@@ -212,7 +212,7 @@
                                     </div>
                                 </div>
                                 <div class="details_info">
-                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
                                     <a class="viewmore_a" href="{%url 'ashokam_details' %}">
                                         <button class="view_more_btn">View more</button>
@@ -237,7 +237,7 @@
                                     <a href="{%url 'skyframe_details' %}">
                                     <h2>Skyframe Beach Resort</h2>
                                     </a>
-                                    <p><a href="#">Zaandam, Amsterdam - View on map</a></p>
+                                    <p><a href="#">Skyframe Beach Resort</a></p>
                                     <p>Aaliyirakkam Beach, Varkala | 3.0 km drive to Varkala Beach</p>
                                     <div class="amenities">
                                         <span>Car parking</span>
@@ -245,10 +245,11 @@
                                         <span>Bike Rent</span>
                                         <span>Taxi services</span>
                                         <span>Complimentary water bottle </span>
+                                        <span>Beach View</span>
                                     </div>
                                 </div>
                                 <div class="details_info">
-                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
                                     <a class="viewmore_a" href="{%url 'skyframe_details' %}">
                                         <button class="view_more_btn">View more</button>
@@ -271,8 +272,8 @@
 									<a href="{%url 'evebeach_details' %}">
 									<h2>Eva Beach Hotel</h2>
 									</a>
-									<p><a href="#">Eva Beach Hotel - View on map</a></p>
-									<p> walkable distance to the Beach</p>
+									<p><a href="#">Eva Beach Hotel</a></p>
+									<p>Walkable distance to the Beach</p>
 									<div class="amenities">
 										<span>Car parking</span>
 										<span> Wi-Fi</span>
@@ -282,7 +283,7 @@
 									</div>
 								</div>
 								<div class="details_info">
-									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+									<a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
 									<a class="viewmore_a" href="{%url 'evebeach_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -307,7 +308,8 @@
 									<a href="{%url 'villa_skyframe_details' %}">
 									<h2>Villa Skyframe</h2>
 									</a>
-									<p><a href="#">Villa Skyframe  - View on map</a></p>
+									<p><a href="#">Villa Skyframe </a></p>
+                                    <p>Varkala Beach, Varkala | About a minute walk to Varkala Beach</p>
 									<div class="amenities">
 										<span>Car parking</span>
 										<span> Wi-Fi</span>
@@ -317,7 +319,7 @@
 									</div>
 								</div>
 								<div class="details_info">
-									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+									<a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
 									<a class="viewmore_a" href="{%url 'villa_skyframe_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -341,7 +343,7 @@
 									<a href="{%url 'haiwa_details_details' %}">
 									<h2>The Haiwa By Hudels</h2>
 									</a>
-									<p><a href="#">The Haiwa By Hudels - View on map</a></p>
+									<p><a href="#">The Haiwa By Hudels</a></p>
 									<p>Varkala Beach, Varkala | 4 minutes walk to Varkala Beach</p>
 									<div class="amenities">
 										<span>Car parking</span>
@@ -352,7 +354,7 @@
 									</div>
 								</div>
 								<div class="details_info">
-									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+									<a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
 									<a class="viewmore_a" href="{%url 'haiwa_details_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -376,7 +378,7 @@
 									<a href="{%url 'nisara_details' %}">
 									<h2>Nisara Homestay</h2>
 									</a>
-									<p><a href="#">Nisara Homestay - View on map</a></p>
+									<p><a href="#">Nisara Homestay</a></p>
 									<p>
 										Aaliyirakkam Beach, Varkala | 2.7 km drive to Varkala Beach</p>
 									<div class="amenities">
@@ -386,7 +388,7 @@
 									</div>
 								</div>
 								<div class="details_info">
-									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+									<a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
 									<a class="viewmore_a" href="{%url 'nisara_details' %}">
 										<button class="view_more_btn">View more</button>
@@ -410,7 +412,7 @@
 									<a href="{%url 'moon_waves_details' %}">
 									<h2>Moon Waves Beach Resort</h2>
 									</a>
-									<p><a href="#">Moon Waves Beach Resort - View on map</a></p>
+									<p><a href="#">Moon Waves Beach Resort </a></p>
 									<p>Varkala Beach, Varkala | 2 minutes walk to Varkala Beach</p>
 									<div class="amenities">
 										<span>Car parking</span>
@@ -421,7 +423,7 @@
 									</div>
 								</div>
 								<div class="details_info">
-									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+									<a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
 									<a class="viewmore_a" href="{%url 'moon_waves_details' %}">
 										<button class="view_more_btn">View more</button>
