--- a/templates/moon_waves_details.html
+++ b/templates/moon_waves_details.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
+                    <a class="navbar-brand logo_h" href="{%url 'index'%}"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -103,7 +103,6 @@
                         <div class="list_div">
                             <h3>Property Rules</h3>
                             <p>Check-in: 12 PM Check-out: 11 AM</p>
-                            <li>Guests below 18 years of age are not allowed at the property.</li>
                             <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                             <li>Pets are not allowed.</li>
                         </div><br><br>
@@ -129,9 +128,9 @@
                             </div>
                             <div class="gallery_item">
                                 <div class="gallery_img">
-                                    <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                    <img src="{% static 'image/property_img/moonwaves_hall.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_hall.jpeg' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
