--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
+                    <a class="navbar-brand logo_h" href="{%url 'index'%}"><img src="{% static 'image/varkala_logo.png' %}" alt="" class="logo-img"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -96,7 +96,11 @@
 
                     <span>Room Types</span><br>
                     <div class="list_div">
-                        <li>Suite with Sea View  --  Room Only  &  Room with Breakfast Available</li>
+                        <li>Executive Room  -- -- Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
+                        <li>AC deluxe double room --  --  Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
+                        <li>AC sea view deluxe double room   -- -- Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
+                        <li>Premium AC  room with Sea View -- --  Room Only & Room with Breakfast available</li>
+                        <li>Suite with Sea View  --  --  Room With Free Cancellation & Room with With Free Cancellation (Breakfast available)</li>
                     </div>
                     <br><br>
 
@@ -104,7 +108,7 @@
                     <div class="list_div">
                         <h3>Property Rules</h3>
                         <p>Check-in: 1 PM  Check-out: 11 AM</p>
-                        <li>Guests below 18 years of age are not allowed at the property.</li>
+    
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                         <li>Pets are not allowed.</li>
                         <li>Unmarried couples are not allowed</li>
@@ -128,14 +132,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <!-- <div class="gallery_item">
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
                                 <div class="hover">
                                     <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>        
     
                     <div class="hotel-gallery" id="gallery">
@@ -155,14 +159,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="gallery_item">
+                        <!-- <div class="gallery_item">
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}" alt="">
                                 <div class="hover">
                                     <a class="light" href="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                   
                         <h1 class="Location">Location</h1>
