--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@
                                     <h2>Skyframe Beach Resort</h2>
                                     </a>
                                     <p><a href="#">Skyframe Beach Resort</a></p>
-                                    <p>Aaliyirakkam Beach, Varkala | 2.0 km drive to Varkala Beach</p>
+                                    <p>Aaliyirakkam Beach, Varkala | 3.0 km drive to Varkala Beach</p>
                                     <div class="amenities">
                                         <span>Car parking</span>
                                         <span> Wi-Fi</span>
@@ -451,37 +451,37 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-dinner"></i>Restaurant</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Enjoy a variety of delicious cuisines in our on-site restaurant, offering a cozy ambiance and exceptional service to enhance your dining experience..</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-bicycle"></i>Activities</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Engage in a range of fun and exciting activities tailored for all ages, from guided tours and cultural events to sports and recreational games.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-shirt"></i>Swimming Pool</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Relax and unwind in our pristine swimming pool, perfect for a refreshing dip or lounging in the sun with poolside amenities.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-car"></i>Bike Rent</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Explore the local area with ease by renting a bike from our convenient bike rental service, ideal for adventurous sightseeing and leisurely rides.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-construction"></i>Wi-Fi</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Stay connected with our high-speed Wi-Fi available throughout the property, ensuring you can work, browse, or stream seamlessly during your stay.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="facilities_item">
                             <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>Bar</h4>
-                            <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
+                            <p>Savor a wide selection of beverages at our stylish bar, featuring expertly crafted cocktails, fine wines, and a relaxed atmosphere for socializing.</p>
                         </div>
                     </div>
                 </div>
