--- a/static/css/style.css
+++ b/static/css/style.css
@@ -879,7 +879,7 @@ button:focus {
 }
 
 .blog_banner_haiwa .bg-parallax{
-  background: url(../image/property_img/haiwa_hudels.jpg) no-repeat scroll center bottom/cover;
+  background: url(../image/property_img/haiwa_room_2.jpeg) no-repeat scroll center bottom/cover;
 }
 /* end-haiwa */
 
