--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -144,17 +144,17 @@
                     <div class="hotel-gallery" id="gallery">
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/skyframe_room3.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/skyframe_room3.jpg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery_item">
                             <div class="gallery_img">
-                                <img src="{% static 'image/property_img/eva_room1.jpeg' %}" alt="">
+                                <img src="{% static 'image/property_img/skyframe_room4.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/eva_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/skyframe_room4.jpg' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
